--- a/src/components/Main/Top/Search/Search.module.scss
+++ b/src/components/Main/Top/Search/Search.module.scss
@@ -12,6 +12,7 @@
 }
 
 .input {
+    height: 58px;
     position: relative;
     z-index: 20;
     border-radius: 56px;
@@ -34,6 +35,7 @@
     list-style: none;
     left: 0;
     width: 100%;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.15);
 }
 
 .listContainer {
