--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'SF Pro Display',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -10,4 +10,76 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('./fonts/SFProDisplay-Medium.eot');
+  src: local('SF Pro Display Medium'), local('SFProDisplay-Medium'),
+  url('./fonts/SFProDisplay-Medium.eot?#iefix') format('embedded-opentype'),
+  url('./fonts/SFProDisplay-Medium.woff2') format('woff2'),
+  url('./fonts/SFProDisplay-Medium.woff') format('woff'),
+  url('./fonts/SFProDisplay-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('./fonts/SFProDisplay-Heavy.eot');
+  src: local('SF Pro Display Heavy'), local('SFProDisplay-Heavy'),
+  url('./fonts/SFProDisplay-Heavy.eot?#iefix') format('embedded-opentype'),
+  url('./fonts/SFProDisplay-Heavy.woff2') format('woff2'),
+  url('./fonts/SFProDisplay-Heavy.woff') format('woff'),
+  url('./fonts/SFProDisplay-Heavy.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('./fonts/SFProDisplay-Bold.eot');
+  src: local('SF Pro Display Bold'), local('SFProDisplay-Bold'),
+  url('./fonts/SFProDisplay-Bold.eot?#iefix') format('embedded-opentype'),
+  url('./fonts/SFProDisplay-Bold.woff2') format('woff2'),
+  url('./fonts/SFProDisplay-Bold.woff') format('woff'),
+  url('./fonts/SFProDisplay-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('./fonts/SFProDisplay-Black.eot');
+  src: local('SF Pro Display Black'), local('SFProDisplay-Black'),
+  url('./fonts/SFProDisplay-Black.eot?#iefix') format('embedded-opentype'),
+  url('./fonts/SFProDisplay-Black.woff2') format('woff2'),
+  url('./fonts/SFProDisplay-Black.woff') format('woff'),
+  url('./fonts/SFProDisplay-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('./fonts/SFProDisplay-Semibold.eot');
+  src: local('SF Pro Display Semibold'), local('SFProDisplay-Semibold'),
+  url('./fonts/SFProDisplay-Semibold.eot?#iefix') format('embedded-opentype'),
+  url('./fonts/SFProDisplay-Semibold.woff2') format('woff2'),
+  url('./fonts/SFProDisplay-Semibold.woff') format('woff'),
+  url('./fonts/SFProDisplay-Semibold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('./fonts/SFProDisplay-Regular.eot');
+  src: local('SF Pro Display Regular'), local('SFProDisplay-Regular'),
+  url('./fonts/SFProDisplay-Regular.eot?#iefix') format('embedded-opentype'),
+  url('./fonts/SFProDisplay-Regular.woff2') format('woff2'),
+  url('./fonts/SFProDisplay-Regular.woff') format('woff'),
+  url('./fonts/SFProDisplay-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
