--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Proxima Nova', sans-serif;
+  font-family: 'SF Pro Display', sans-serif;
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
