added hints list animation + select current hint

--- a/src/components/Main/Top/Search/Search.module.scss
+++ b/src/components/Main/Top/Search/Search.module.scss
@@ -35,10 +35,7 @@
     list-style: none;
     left: 0;
     width: 100%;
-    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.15);
-}
-
-.listContainer {
+    box-shadow: 0 4px 50px rgba(0, 0, 0, 0.15);
     margin-top: 5px;
 }
 
