--- a/src/components/Main/Top/Top.module.scss
+++ b/src/components/Main/Top/Top.module.scss
@@ -44,17 +44,43 @@
     width: 100%;
 }
 
+.logout {
+    background: rgba(255, 255, 255, 0.25);
+}
+
 .login {
+    @include flexible();
+    justify-content: center;
+    width: 120px;
+    height: 58px;
+    cursor: pointer;
     margin-left: 15px;
     border: 1px solid #FFFFFF;
     border-radius: 33px;
     font-weight: 600;
-    padding: 18px 33px;
-    height: 58px;
     font-size: 18px;
     line-height: 21px;
     color: #FFFFFF;
+}
 
+.authorizedContainer {
+    position: relative;
+    opacity: 1;
+    animation-duration: 2s;
+    animation-name: logos;
+}
+
+.authorized {
+    left: 0;
+    right: 0;
+    top: 30px;
+    margin: auto;
+    text-align: center;
+    position: absolute;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    color: #FFFFFF;
 }
 
 @keyframes logos {
@@ -76,5 +102,9 @@
     }
     .logos {
         margin: 0 auto 60px;
+    }
+    .authorized {
+        font-size: 16px;
+        top: 20px
     }
 }
