--- a/src/components/Login/Form/Form.module.scss
+++ b/src/components/Login/Form/Form.module.scss
@@ -4,11 +4,7 @@
     position: relative;
 }
 
-.form {
-    background: #FFFFFF;
-    box-shadow: 0 4px 40px rgba(0, 0, 0, 0.15);
-    border-radius: 15px;
-    padding: 50px 60px;
+.formContainer {
     position: absolute;
     left: 0;
     right: 0;
@@ -17,6 +13,30 @@
     width: 510px;
 }
 
+.form {
+    position: relative;
+    z-index: 2;
+    background: #FFFFFF;
+    box-shadow: 0 4px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 15px;
+    padding: 50px 60px;
+}
+
 .errors {
     position: relative;
 }
+
+.back {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -25px;
+    margin: auto;
+    z-index: 1;
+    width: 90%;
+    height: 200px;
+    background: #FFFFFF;
+    box-shadow: 0 4px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+}
+
