--- a/src/components/Main/Top/Top.module.scss
+++ b/src/components/Main/Top/Top.module.scss
@@ -4,8 +4,8 @@
     padding: 170px 0 120px;
 }
 
-    .logos {
-            margin: 0 auto 89px;
+.logos {
+    margin: 0 auto 89px;
     @include flexible();
     justify-content: center;
     animation-name: logos;
@@ -14,16 +14,16 @@
 }
 
 .wildhack {
-    width: 13%;
+    width: 20%;
 }
 
 .cross {
     margin: 0 30px;
-    width: .6%;
+    width: .9%;
 }
 
 .reality {
-    width: 12%;
+    width: 18%;
 }
 
 .demo {
@@ -95,7 +95,7 @@
 
 @media (max-width: 1600px) {
     .top {
-        padding: 100px 0 80px;
+        padding: 80px 20px 80px;
     }
     .demo {
         font-size: 18px;
@@ -106,5 +106,29 @@
     .authorized {
         font-size: 16px;
         top: 20px
+    }
+}
+
+@media (max-width: 992px) {
+    .cross {
+        margin: 0 20px;
+    }
+    .top {
+        padding: 60px 20px 60px;
+    }
+    .demo {
+        font-size: 16px;
+    }
+    .logos {
+        margin: 0 auto 30px;
+    }
+    .authorized {
+        font-size: 14px;
+        top: 15px
+    }
+    .login {
+        font-size: 16px;
+        font-weight: 500;
+        height: 52px;
     }
 }
