--- a/src/components/Main/Cards/Cards.module.scss
+++ b/src/components/Main/Cards/Cards.module.scss
@@ -6,3 +6,15 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 40px;
 }
+
+@media (max-width: 1260px) {
+    .cards {
+        padding: 50px 20px 80px;
+    }
+}
+@media (max-width: 1200px) { //1200px - 993px
+
+}
+@media (max-width: 992px) { //992px - 769px
+
+}
