--- a/src/components/Main/Cards/Cards.module.scss
+++ b/src/components/Main/Cards/Cards.module.scss
@@ -18,3 +18,10 @@
 @media (max-width: 992px) { //992px - 769px
 
 }
+@media (max-width: 650px) {
+    .cards {
+        padding: 20px 20px 40px;
+        grid-template-columns: 1fr;
+    }
+
+}
