--- a/src/components/Main/Top/Search/HintsList/HintsList.module.scss
+++ b/src/components/Main/Top/Search/HintsList/HintsList.module.scss
@@ -28,3 +28,22 @@
     border-radius: 10px;
     color: $primary-text-color;
 }
+
+@media (max-width: 650px) {
+    .list {
+        position: relative;
+        z-index: 1;
+        box-shadow: none;
+        padding: 0 25px;
+        margin: 0;
+        border-radius: 0;
+    }
+
+    .item {
+        width: 100%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+        font-size: 16px;
+    }
+}
