--- a/src/components/Main/Top/Search/SearchInput/SearchInput.module.scss
+++ b/src/components/Main/Top/Search/SearchInput/SearchInput.module.scss
@@ -16,8 +16,21 @@
     border: none;
     width: 100%;
     background: rgba(255,255,255,1);
-    padding: 18px 120px 18px 30px;
+    padding: 18px 30px;
     font-weight: 500;
     font-size: 18px;
     line-height: 21px;
+}
+
+@media (max-width: 650px) { //650px - less
+    .inputContainer {
+        grid-area: input;
+    }
+
+    .input {
+        height: 100%;
+        background: rgba(242,242,242,1);
+        font-size: 14px;
+        padding: 12px 20px;
+    }
 }
