--- a/src/components/Main/Top/Search/HintsList/HintsList.module.scss
+++ b/src/components/Main/Top/Search/HintsList/HintsList.module.scss
@@ -29,6 +29,19 @@
     color: $primary-text-color;
 }
 
+@media (max-width: 992px) {
+    .list {
+        padding: 52px 20px 20px;
+    }
+    .item {
+        font-size: 16px;
+        padding: 10px 0;
+        width: 100%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+}
 @media (max-width: 650px) {
     .list {
         position: relative;
@@ -37,13 +50,5 @@
         padding: 0 25px;
         margin: 0;
         border-radius: 0;
-    }
-
-    .item {
-        width: 100%;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
-        font-size: 16px;
     }
 }
