--- a/src/components/Main/Top/Search/SearchInput/SearchInput.module.scss
+++ b/src/components/Main/Top/Search/SearchInput/SearchInput.module.scss
@@ -22,6 +22,15 @@
     line-height: 21px;
 }
 
+@media (max-width: 992px) {
+    .input {
+        height: 52px;
+        font-size: 16px;
+        line-height: 18px;
+        padding: 15px 20px 15px 20px;
+    }
+}
+
 @media (max-width: 650px) { //650px - less
     .inputContainer {
         grid-area: input;
