--- a/src/components/Login/Form/Form.module.scss
+++ b/src/components/Login/Form/Form.module.scss
@@ -10,7 +10,7 @@
     right: 0;
     top: 0;
     margin: auto;
-    width: 510px;
+    max-width: 510px;
 }
 
 .form {
@@ -39,4 +39,28 @@
     box-shadow: 0 4px 40px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
 }
+
+@media (max-width: 768px) {
+    .formContainer {
+
+    }
+    .form {
+        padding: 30px 40px;
+    }
+    .back {
+        bottom: -20px;
+        width: 80%;
+    }
+}
+
+@media (max-width: 480px) {
+    .form {
+        padding: 20px;
+    }
+    .back {
+        bottom: -15px;
+        width: 80%;
+    }
+}
+
 
