--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -17,12 +17,44 @@
     margin-bottom: 30px;
 }
 
+@keyframes logos {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 @media (max-width: 1600px) {
     .top {
-        padding: 100px 0 138px;
+        padding: 80px 20px 136px;
     }
     .demo {
         font-size: 18px;
     }
+}
+
+@media (max-width: 992px) {
+    .cross {
+        margin: 0 20px;
+    }
+    .top {
+        padding: 60px 20px 112px;
+    }
+    .demo {
+        font-size: 16px;
+    }
+    .logos {
+        margin: 0 auto 30px;
+    }
+}
+@media (max-width: 768px) {
+    .top {
+        padding: 30px 0 100px;
+    }
+}
+@media (max-width: 480px) {
+
 }
 
