--- a/src/components/Main/Top/Search/Search.module.scss
+++ b/src/components/Main/Top/Search/Search.module.scss
@@ -6,12 +6,15 @@
 
 .container {
     position: relative;
-    height: 58px;
     width: 100%;
     border-radius: 56px;
-    padding: 19px 30px 18px 30px;
     background: rgba(255,255,255, 1);
     cursor: pointer;
+}
+
+.containerInner {
+    height: 58px;
+    padding: 19px 30px 18px 30px;
 }
 
 .closedPlaceholder {
@@ -22,16 +25,12 @@
 }
 
 @media (max-width: 992px) {
-    .input, .container {
+    .containerInner {
         height: 52px;
         font-size: 16px;
         line-height: 18px;
     }
-    .container {
-        padding: 16px 20px 15px 20px;
-
-    }
-    .input {
+    .containerInner {
         padding: 15px 20px 15px 20px;
     }
     .closedPlaceholder {
