--- a/src/components/Main/Top/Search/HintsList/HintsList.module.scss
+++ b/src/components/Main/Top/Search/HintsList/HintsList.module.scss
@@ -29,6 +29,18 @@
     color: $primary-text-color;
 }
 
+.notFound {
+    cursor: default;
+    text-align: center;
+    color: $primary-text-color;
+}
+
+.notFound:hover {
+    background: transparent;
+    border-radius: 10px;
+}
+
+
 @media (max-width: 992px) {
     .list {
         padding: 52px 20px 20px;
