--- a/src/components/Login/Form/Form.module.scss
+++ b/src/components/Login/Form/Form.module.scss
@@ -22,6 +22,17 @@
     padding: 50px 60px;
 }
 
+.buttons {
+    @include flexible();
+    justify-content: space-between;
+}
+
+.backBtn {
+    display: block;
+    font-size: 16px;
+    color: #CB11AB;
+}
+
 .errors {
     position: relative;
 }
@@ -60,6 +71,9 @@
     .back {
         bottom: -15px;
         width: 80%;
+    }
+    .backBtn {
+        font-size: 14px;
     }
 }
 
