--- a/src/components/Main/Top/Top.module.scss
+++ b/src/components/Main/Top/Top.module.scss
@@ -59,6 +59,10 @@
     font-size: 20px;
     line-height: 24px;
     color: #FFFFFF;
+
+    & span {
+        font-weight: 700;
+    }
 }
 
 @keyframes logos {
